fixed table overflow

--- a/resources/assets/stylus/main.styl
+++ b/resources/assets/stylus/main.styl
@@ -215,8 +215,11 @@ body{
 	.content-wrapper > *{
 		padding:0px;
 	}
+	.content-table{
+		overflow: auto;
+	}
 	.main-content{
-		overflow: scroll;
+
 		& > table{
 			max-width:100%;
 		}
